--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,3 @@
-RewriteCond%{HTTP:X-Forwarded-Proto}=https
-RewriteRule^(.*)$http://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+RewriteEngine On
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
